--- a/build.gradle
+++ b/build.gradle
@@ -10,4 +10,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'junit:junit:4.11'
 }
